--- a/anfisa_for_friends/templates/about/description.html
+++ b/anfisa_for_friends/templates/about/description.html
@@ -3,5 +3,13 @@
   Анфиса для друзей. Описание проекта
 {% endblock %}
 {% block content %}
-  <h1>Описание проекта</h1>
+<!-- Блок content -->
+<main class="pt-5 my-5">       
+  <div class="container">
+    <h1> О проекте</h1>
+    <p>
+      Каталог экзотических сортов мороженого.
+    </p>
+</main>
+<!-- Конец блока content -->
 {% endblock %}
