--- a/anfisa_for_friends/templates/base.html
+++ b/anfisa_for_friends/templates/base.html
@@ -2,7 +2,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link rel="icon" href="{% static 'img/fav/fav.ico' %}" type="image">
+    <meta charset="utf-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/fav/fav.ico" type="image">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>
       {% block title %}{% endblock %}
     </title>
@@ -10,10 +13,10 @@
   </head>
   <body>
     {% include "includes/header.html" %}
-    <main>
       {% block content %}
       {% endblock %}
-    </main>
-    {% include "includes/footer.html" %}   
+    {% include "includes/footer.html" %}
+    <script src="{% static 'js/jquery-3.2.1.slim.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>   
   </body>
 </html>
